Fix incorrect sliding animation on Safari, Samsung Browser

--- a/src/components/background/Mountains.scss
+++ b/src/components/background/Mountains.scss
@@ -1,7 +1,7 @@
 .shifted {
-  transform: translateX(-100%);
+  // transform: translateX(-100%);
 
   &_clearfix {
-    transform: translateX(calc(-100% + 6px));
+    // transform: translateX(calc(-100% + 6px));
   }
 }
